miss align dropdown fixed by vikram

--- a/public/assets/css/front_fixes.css
+++ b/public/assets/css/front_fixes.css
@@ -167,16 +167,10 @@ header .head-links ul.navbar-nav li a{font-family: 'swiss_721light' !important;}
 	#redirectloginModal .modal-body .nav-justified.wowtables-nav > li a{padding: 2px 5px !important;}
 }
 
-@media only screen and (max-device-width: 480px), only screen and (min-device-width: 560px) and (max-device-width: 1136px) and (-webkit-min-device-pixel-ratio: 2) {
-    /* iPhone only */
-	.panel-title{font-size:14px;}
-	.btn.tooltip1{padding: 1px;}
-	#party_size1 {font-size: 12px; margin-right: -11px !important;}
-	.deal-detail-right .reservation-box .reservation-accordian{padding: 10px 5px;}
-}
 
 @media (max-width: 359px) and (min-width: 320px){
 	#review-menu-tab-detail{ height: 40px;}
+	#party_size1 {margin-right: -11px !important; width: 75px; font-size: 13px;}
 }
 
 /* Landscape */
